--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Billora | <%= typeof title !=='undefined' ? title : 'แผงควบคุมการเงิน' %>
+    <title>GoodOper | <%= typeof title !=='undefined' ? title : 'แผงควบคุมการเงิน' %>
     </title>
     <script src="/js/tailwind.min.js"></script>
     <link href="/css/all.min.css" rel="stylesheet">
